QAbstractItemView: fix crash if setData() does a model reset

Task-number: QTBUG-96654
Change-Id: I2dca4af387ef5ad549a1a41fba2bc6de217f4ea9
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 18bb10373aa06d258763a1f75e53acb397269ce4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>